# PaleEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
3dparty/GLFW/: CMakeLists.txt
3dparty/glad/: CMakeLists.txt
3dparty/glad/include/glad/: glad.h
3dparty/glad/src/: glad.c
Assets/: CMakeLists.txt
Assets/Shaders/: light_point.frag  light_point.vert  model.frag  model_blinnphong.frag  model_blinnphong.vert  model_blinnphong_normalmapping.frag  model_pbr.frag  model_pbr.vert  skybox.vert
Assets/Shaders/Model/: model_blinnphong.frag  model_blinnphong.vert  model_blinnphong_normalmapping.frag  model_blinnphong_normalmapping.vert  model_pbr.frag  model_pbr.vert  model_skybox_reflect.frag  model_skybox_refract.frag  model_skybox_refract.vert
Assets/Shaders/Test/: model.frag  model.vert  model_normal.frag  model_normal.vert
Assets/shaders/skybox/: brdf.frag  brdf.vert  equirectangular2Skybox.frag  irradiance.frag  prefilter.frag  skybox.frag  skybox.vert
PaleEditor/: CMakeLists.txt
PaleEditor/src/: PanelManager.cpp  PanelManager.h  UIManager.cpp  UIManager.h  main.cpp  stdafx.h
PaleEditor/src/Panels/: HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  ViewportPanel.cpp  ViewportPanel.h
PaleRenderer/: CMakeLists.txt  PaleRenderer.h
PaleRenderer/Assets/Shaders/: camera.frag
PaleRenderer/src/: Camera.cpp  Camera.h  Model.cpp  Model.h  PaleRendererExport.h  PaleRendererOpenGL.h  Pass.cpp  Pass.h  TextureOpenGL.cpp  TextureOpenGL.h  stdafx.h  temp.cpp  temp.h
PaleRenderer/src/Common/: Singleton.h
PaleRenderer/src/Core/: PaleRendererExport.h  PathManager.cpp  PathManager.h
PaleRenderer/src/OpenGL/: FrameBufferOpenGL.cpp  FrameBufferOpenGL.h  MeshOpenGL.cpp  MeshOpenGL.h  PassOpenGL.cpp  PassOpenGL.h  TextureOpenGL.cpp  TextureOpenGL.h  WindowOpenGL.cpp  WindowOpenGL.h
PaleRenderer/src/Private/: stdafx.h
PaleRenderer/src/Private/PaleRenderer/OpenGL/: MeshOpenGL.cpp  MeshOpenGL.h  ShaderOpenGL.cpp  ShaderOpenGL.h  TextureOpenGL.cpp  TextureOpenGL.h
PaleRenderer/src/Public/PaleRenderer/: PaleRendererOpenGL.h
PaleRenderer/src/Public/PaleRenderer/Common/: Event.h
PaleRenderer/src/Public/PaleRenderer/Core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Log.cpp  Log.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  PaleRendererExport.h  PathManager.cpp  PathManager.h
PaleRenderer/src/Public/PaleRenderer/ECS/: CompSkybox.h  LightComp.h  MeshRendererComp.h  NameComp.h  Scene.cpp  Scene.h  TransformComp.h
PaleRenderer/src/Public/PaleRenderer/Material/: Material.cpp  Material.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
PaleRenderer/src/Public/PaleRenderer/Mesh/: Cube.cpp  Cube.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  Quad.cpp  Quad.h  Sphere.cpp  Sphere.h
PaleRenderer/src/Public/PaleRenderer/OpenGL/: FrameBufferOpenGL.cpp  FrameBufferOpenGL.h  MeshOpenGL.cpp  MeshOpenGL.h  PassOpenGL.cpp  PassOpenGL.h  TextureOpenGL.cpp  TextureOpenGL.h  WindowOpenGL.cpp  WindowOpenGL.h
PaleUI/: CMakeLists.txt
PaleUI/src/: main.cpp
